# whisper-api

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml
run/: QUICK_START.md  build-docker-if-changed.sh  dev.sh  download-model.sh  start-docker.sh  start.sh  stop-docker.sh  stop.sh  test.sh
src/: config.rs  error.rs  main.rs  whisper.rs
src/api/: info.rs  mod.rs  models.rs  transcribe.rs
