[package]
name = "whisper-rust-api"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Whisper.cpp bindings
whisper-rs = "0.15"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

# Configuration
dotenv = "0.15"
clap = { version = "4.0", features = ["derive", "env"] }

# File handling
tempfile = "3.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]

# Testing
[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
